# pentagent

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  WALKTHROUGH.md  pyproject.toml  requirements.txt
config/: config.example.yaml  scope.example.yaml
scripts/: init-github.sh
src/pentagent/: __init__.py  cli.py  config.py  logging_setup.py
src/pentagent/enrichment/: __init__.py  cve.py  passive_recon.py
src/pentagent/knowledge/: __init__.py  mitre.py
src/pentagent/llm/: __init__.py  anthropic_client.py  base.py  local_client.py  openai_client.py
src/pentagent/memory/: __init__.py  models.py  store.py
src/pentagent/orchestrator/: __init__.py  orchestrator.py
src/pentagent/parsers/: __init__.py  ffuf.py  generic.py  httpx.py  nmap.py  nuclei.py
src/pentagent/prompts/: __init__.py  templates.py
src/pentagent/reporting/: poc.py  reporter.py
src/pentagent/safety/: __init__.py  audit.py  ratelimit.py  scope.py
src/pentagent/strategy/: __init__.py  actions.py  followups.py  heuristics.py  phases.py  planner.py
src/pentagent/tools/: __init__.py  amass_tool.py  base.py  executor.py  ffuf_tool.py  gobuster_tool.py  httpx_tool.py  katana_tool.py  nikto_tool.py  nmap_tool.py  nuclei_tool.py  registry.py  sqlmap_tool.py  subfinder_tool.py
tests/: test_audit.py  test_memory.py  test_parsers.py  test_scope.py  test_tools.py
