[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pentagent"
version = "0.1.0"
description = "AI-powered penetration testing agent for authorized assessments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tris Vaquero" }]
keywords = ["pentesting", "security", "bug-bounty", "llm", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "anyio>=4.2",
    "rich>=13.7",
    "typer>=0.12",
    "tenacity>=8.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
pentagent = "pentagent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
